# Imrag

./: .gitignore  README.md  pyproject.toml  requirements.txt
imrag/: constant.py
notebooks/: image-rag-llm.ipynb
